# EMS

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  requirements.txt
Backend/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/management/commands/: create_superuser.py  setup_initial_data.py
Backend/migrations/: 0001_initial.py  0002_remove_customuser_department_and_more.py  0003_remove_employee_department_customuser_department_and_more.py  0004_remove_customuser_department_and_more.py  0005_remove_leaverequest_approved_by_and_more.py  0006_task_rejection_comment.py  0007_alter_task_status.py  0008_alter_task_status_request.py  0009_alter_request_submitted_by.py
EMS_Backend/: asgi.py  settings.py  urls.py  wsgi.py
SecondBackend/: .dockerignore  CMakeLists.txt  Dockerfile  go.mod  main.cpp  main.go  render.yaml
SecondBackend/src/: CMakeLists.txt  DockerFile  api_handlers.cpp  api_handlers.h  database.cpp  database.h  main.cpp  mobile_server.cpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: AdminDashboard.js  EmployeeDashboard.js  Login.js  ManagerDashboard.js  MobileDashboard.js
frontend/src/components/Admin_tabs/: DepartManagement.js  EmployeeManagement.js  FileManagement.js  RequestManagement.js  UserManagement.js
frontend/src/utils/: api.js
